--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.8",
     "antd": "^5.0.3",
     "axios": "^1.2.0",
     "framer-motion": "^7.6.15",
