--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@fontsource/roboto": "^4.5.8",
     "@reduxjs/toolkit": "^1.9.1",
     "antd": "^5.0.3",
@@ -16,6 +17,7 @@
     "framer-motion": "^7.6.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^6.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "sass": "^1.56.1",
