--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "antd": "^5.0.3",
     "axios": "^1.2.0",
+    "emoji-picker-react": "^4.4.7",
     "framer-motion": "^7.6.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
