--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@fontsource/roboto": "^4.5.8",
+    "@formkit/auto-animate": "^1.0.0-beta.6",
     "@reduxjs/toolkit": "^1.9.1",
     "antd": "^5.0.3",
     "axios": "^1.2.0",
