--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
-    "@formkit/auto-animate": "^0.7.0",
-    "@reduxjs/toolkit": "^1.9.5",
     "@fontsource/roboto": "^4.5.8",
+    "@formkit/auto-animate": "^0.7.0",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.6.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
@@ -22,8 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
-    "socket.io-client": "^4.7.0",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "socket.io-client": "^4.7.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.2",
